--- a/src/styles/colors/buttons.styl
+++ b/src/styles/colors/buttons.styl
@@ -164,3 +164,10 @@
 				color $color-light-inv
 				.svg-icon
 					fill $color-light-inv
+
+			&.btn-danger
+				color $color-danger
+				border-color $color-danger
+				&:hover
+					color $color-danger-dark
+					border-color $color-danger-dark
