--- a/src/app/admin/uploads/uploads.helper.mixins.pug
+++ b/src/app/admin/uploads/uploads.helper.mixins.pug
@@ -110,6 +110,12 @@ mixin message(vm, entity)
 
 mixin footer(vm, entity)
 	button.btn.btn-hollow.pull-left(ng-click="$dismiss()") Cancel
+		button.btn.btn-primary.btn-red(ng-hide=`${entity}.moderation.is_deleted`, ng-click=`${vm}.delete()`, ng-disabled="submitting")
+			+icon('trash').space-right.shift-down-1px
+			| Delete
+		button.btn.btn-primary.btn-red(ng-show=`${entity}.moderation.is_deleted`, ng-click=`${vm}.undelete()`, ng-disabled="submitting")
+			+icon('trash').space-right.shift-down-1px
+			| Undelete
 		button.btn.btn-primary.btn-red(ng-hide=`${entity}.moderation.is_refused`, ng-click=`${vm}.refuse()`, ng-disabled="submitting")
 			+icon('thumb-down').space-right.shift-down-1px
 			| Refuse
