--- a/src/styles/colors/buttons.styl
+++ b/src/styles/colors/buttons.styl
@@ -103,6 +103,9 @@
 			&:active
 				background-color rgba(black, 0.2)
 
+			&:disabled
+				background-color rgba(black, 0.2)
+
 		// primary button
 		&.btn-primary
 			color #eee
@@ -137,6 +140,9 @@
 
 			&:active
 				background-color rgba(black, 0.3)
+
+			&:disabled
+				background-color rgba(black, 0.2)
 
 		// hollow button
 		&.btn-hollow
