--- a/src/app/backglasses/backglass.details.modal.pug
+++ b/src/app/backglasses/backglass.details.modal.pug
@@ -59,7 +59,10 @@ include ../template/_mixins
 
 	.modal-footer
 		button.btn.btn-hollow.pull-left(ng-click="$dismiss()") Cancel
-		button.btn.btn-default.pull-left(ng-click="vm.edit(vm.backglass)", ng-show="vm.AuthService.hasPermission('backglasses/update') || (vm.AuthService.isAuthor(vm.backglass) && vm.AuthService.hasPermission('backglasses/update-own'))")
+		button.btn.btn-default.pull-left(ng-click="vm.edit(vm.backglass)", ng-if="vm.AuthService.hasPermission('backglasses/update') || (vm.AuthService.isAuthor(vm.backglass) && vm.AuthService.hasPermission('backglasses/update-own'))")
 			+icon('edit').space-right
 			| Edit
+		button.btn.btn-default.pull-left(ng-click="vm.add(vm.backglass)", ng-if="vm.AuthService.hasPermission('backglasses/update') || (vm.AuthService.isAuthor(vm.backglass) && vm.AuthService.hasPermission('backglasses/update-own'))")
+			+icon('plus-circle').space-right
+			| Add
 		button.btn.btn-primary(ng-click="vm.download(vm.file)") Download
