--- a/src/styles/utilities.styl
+++ b/src/styles/utilities.styl
@@ -61,9 +61,9 @@
 .padder-top-less
 	margin-top 5px
 .padder-top
-	margin-top 15px
+	margin-top 15px !important
 .padder-top-2x
-	margin-top 30px
+	margin-top 30px !important
 .padder-top-3x
 	margin-top 50px
 .padder-nobottom
