--- a/src/app/releases/details/release.download.modal.pug
+++ b/src/app/releases/details/release.download.modal.pug
@@ -11,10 +11,11 @@ include ../../template/_mixins
 		//- FILES
 		h3.hr--margin-smaller Choose your Flavors:
 		.row
-			.col-sm-3(ng-repeat="file in vm.tableFiles")
-				.flavor-item(ng-class="{ active: vm.downloadFiles[file.file.id] }", ng-click="vm.toggleFile(file)")
-					img.img.img-responsive.img--rounded-more(img-src="{{ file.playfield_image.variations['square-2x'].url }}")
-					.text-center.padder-top
+			.col-sm-6(ng-repeat="file in vm.tableFiles")
+				.flavor-item.media.padder-top.padder-bottom(ng-class="{ active: vm.downloadFiles[file.file.id] }", ng-click="vm.toggleFile(file)")
+					.media-left
+						img.media-object.img.img-responsive.img--rounded-more(img-src="{{ file.playfield_image.variations['square-2x'].url }}")
+					.media-body
 						label.label--block
 							strong {{ vm.Flavors.orientation.values[file.flavor.orientation].name }},
 							| &nbsp;{{ vm.Flavors.lighting.values[file.flavor.lighting].name }}
