--- a/src/styles/images.styl
+++ b/src/styles/images.styl
@@ -136,6 +136,9 @@
 // .img-avatar--lg          - Large
 //
 // Styleguide 7.4.1
+.img--xlg
+	width 128px
+	height 128px
 .img-avatar
 	width 64px
 	height 64px
