--- a/src/app/releases/details/release.details.pug
+++ b/src/app/releases/details/release.details.pug
@@ -249,8 +249,7 @@ include ../../template/_mixins
 		.zigzag(ng-show="vm.hiddenComments > 0")
 			.panel.panel--inner
 				| {{ vm.hiddenComments }} hidden comments
-				label.a(ng-click="vm.loadRemainingComments()") Load more...
-		release-comment(ng-repeat="comment in vm.commentsBody track by comment.id", comment="comment", release="vm.release")
+				label.a(ng-click="vm.loadMoreComments()") Load more...
 		release-comment(ng-repeat="comment in vm.commentsTail track by comment.id", comment="comment", release="vm.release")
 
 		//-- NEW COMMENT
